<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CatchBobo</string>
    <string name="action_settings">Settings</string>
    <!-- 裝置註冊登入 -->
    
    <string name="IMEI000">請從上方選單選取您服務的公司</string>
    <string name="IMEI001">您服務的公司為</string>
    <string name="IMEI002">按下按鈕將裝置註冊</string>
    <string name="TV0021">員工帳號:</string>
    <string name="TV0022">員工密碼:</string>
    <string name="BT0027">裝置註冊</string>
    <string name="Alert1">連線存取失敗!!</string>
    <string name="Alert2">裝置尚未購買註冊資格!!</string>
    <string name="Alert3">帳號密碼錯誤.請重新輸入!!</string>
    <string name="Alert4">網路異常，無法轉換經緯度，請自行輸入路段名稱!!</string>
    <string name="Alert5">請確認開單資料皆有填入!!</string>
    <string name="demo">此為正式授權版功能</string>
    <string name="BT0029">登錄</string>
    <string name="amainBT102">取消</string>
    <string name="title">上班簽到</string>
    <string name="welcome">已經上班簽到</string>
    <!--提示-->
    <string name="Hint0">請選擇公司</string>
    <string name="Hint1">請輸入員工帳號</string>
    <string name="Hint2">請輸入員工密碼</string>
      <!-- 選項 -->
    <string name="BT001">開班</string>
    <string name="BT002">開單</string>
    <string name="BT003">稽查</string>
    <string name="BT004">統計</string>
    <string name="BT005">設定</string>
    <string name="BT006">登出</string>
    <string name="BTA001">進階功能</string>
    <!-- 資料連線 -->
    <string name="msg_no_data">無資料!</string>
    <string name="msg_fail">獲取資料失敗!</string>
    
    <!-- 測試功能 -->
    <string name="send_text">發送文字訊息</string>
    
        <!-- OCR -->
    <string name="OCBT001">拍照</string>
    <string name="OCBT002">手動輸入</string>

    <string name="camera1">拍攝</string>
    <string name="camera2">保存</string>
    <string name="camera3">取消</string>
    
    <!-- 開單 -->
    <string name="BilSP001">憑單種類</string>
     <string-array name="BilSP001func">
        <item >通知單,1</item>
        <item >稽查單,2</item>
        <item >告發單,3</item>
      </string-array>
    <string name="BilSP002">費率選擇</string>
    <string-array name="BilSP002func">
        <item >計時一般費率,1,20</item>
        <item >計次一般費率,2,50</item>
        <item >差別費率,3,80</item>
        <item >累進費率,4,40</item>
    </string-array>

    <string name="BilTV001">車號:</string>
    <string name="BilTV002">停車日期:</string>
    <string name="BilTV002Y">年</string>
    <string name="BilTV002M">月</string>
    <string name="BilTV002D">日</string>
    <string name="BilTV003">開單日期:</string>
    <string name="BilTV004">路段:</string>
    <string name="BilTV005">格位編號:</string>
    <string name="BilTV006">繳費截止日期:</string>
    <string name="BilTV007">繳費金額</string>
    <string name="BilTV008">停車時間</string>
    <string name="BilTV009">管理員簽章</string>
    <string name="BilTV010">車種:</string>
    <string-array name="BilSP010func">
        <item >機車,1</item>
        <item >汽車,2</item>
    </string-array>
    <string name="BilTV011">基本費率:</string>
    <string name="BilBT001">清除</string>
    <string name="BilBT002">儲存</string>
    <string name="BilBT003">離開</string>
    
    <!-- 列印 -->
    <string name="PriTV001">單號</string>
    <string name="PriTV002">時間</string>
    
    <string name="PriBT001">列印</string>
    <string name="PriBT002">儲存</string>
    <string name="PriBT003">更新</string>
    
    <string name="PriTemp1">列印收費單，此為正式版功能</string>
    <string name="PriTemp2">更新停車時間資訊</string>

      <!-- 統計查詢 -->  
    
    <string name="SETV001">今日開單車輛</string>
    

        

    <!-- 待整理 -->

   
    
    <!-- map -->
    <string name="Company">1</string>
    <string name="gro1">1</string>
    <string name="gro2">2</string>
    <string name="gro3">3</string>
    <string name="gro4">4</string>

    <string name="mygro">2</string>
    <string name="member">成員</string>
    <string name="Alert">位置更新</string>
    <string name="Nowloca">目前位置</string>
	<string name="lat">緯度:</string>
	<string name="lon">經度:</string>
	<string name="dcan">取消</string>
		

   
    

    

    <string name="dtotel">tel:</string>
    <string name="dtomail">mailto:</string>
    <string name="dtosms">smsto:</string>
    <string name="mapsni0">UID:</string>
    <string name="mapsni1">座標:</string>
    <string name="mapsni2">電話:</string>
    <string name="mapsni3">最後上線時間:</string>

    
    <string name="function">聯繫選項</string>
    <string-array name="func">
        <item >撥電話</item>
        <item >發送郵件</item>
        <item >傳送簡訊</item>
        <item >網路通訊</item>
        <item >Hangouts</item>
        <item >導航</item>
      </string-array>
   
   <!--XMPP--> 
    <string name="hello">Hello World, XPMM!</string>
    <string name="app_login_name">XMPP伺服器</string>    
    <!-- 登錄 -->
    <string name="TV0011">帳號</string>
    <string name="TV0012">密碼</string>
    <string name="BT007">登錄</string>
    <!-- 對話 -->
    <string name="BT008">發送</string>
    <!-- 訊息 -->
    <string name="ME001">登錄失敗</string>
    

</resources>
