<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceblue"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/BilLL001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

  <TableRow
      android:id="@+id/BilTB011"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1" >

        <Spinner
            android:id="@+id/BilSP001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red" />

   </TableRow> 

    <TableRow
        android:id="@+id/BilTB012"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
      
                <Spinner
                    android:id="@+id/BilSP002"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red" />

  </TableRow>

    </LinearLayout>

  <TableRow
        android:id="@+id/BilTB001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/BilTV001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/BilTV001"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/BilET0011"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/black" />

      <TextView
          android:id="@+id/BilTV001N"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="-"
          android:textColor="@color/black"
          android:textSize="20dp"
          android:textStyle="bold" />

        <EditText
            android:id="@+id/BilET0012"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/black" />

    </TableRow>
    
  
    <TableRow
        android:id="@+id/BilTB002"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/BilTV002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BilTV002"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/BilET002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />

       <TextView
            android:id="@+id/BilTV002Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV002Y"
            android:textColor="@color/black"
            android:layout_weight="1" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

       <EditText
           android:id="@+id/BilET0021"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:textColor="@color/black" />

       <TextView
            android:id="@+id/BilTV002M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV002M"
            android:textColor="@color/black"
            android:layout_weight="1" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/BilET0022"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />

       <TextView
            android:id="@+id/BilTV002D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV002D"
            android:textColor="@color/black"
            android:layout_weight="1" 
            android:textAppearance="?android:attr/textAppearanceLarge" />   

    </TableRow>
    
        <TableRow
            android:id="@+id/BilTB003"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

        <TextView
            android:id="@+id/BilTV003"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV003"
            android:textColor="@color/black" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/BilET003"
            android:layout_width="match_parent"
            android:textColor="@color/black" 
            android:layout_height="wrap_content" />

    </TableRow>
    
 <TableRow
        android:id="@+id/BilTB004"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/BilTV004"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV004"
            android:textColor="@color/black" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/BilET004"
            android:textColor="@color/black" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>
  
 <TableRow
        android:id="@+id/BilTB005"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/BilTV010"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BilTV010"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/BilSP010func"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red" />
        
         <TextView
             android:id="@+id/BilTV011"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/BilTV011"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/black" />
         
         <TextView
             android:id="@+id/BilTV012"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/black" />

    </TableRow>
    
 <TableRow
        android:id="@+id/BilTB006"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/BilTV006"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BilTV006"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/BilET0061"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />

       <TextView
            android:id="@+id/BilTV006Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV002Y"
            android:textColor="@color/black"
            android:layout_weight="1" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

       <EditText
           android:id="@+id/BilET0062"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:textColor="@color/black" />

       <TextView
            android:id="@+id/BilTV006M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV002M"
            android:textColor="@color/black"
            android:layout_weight="1" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/BilET0063"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />

       <TextView
            android:id="@+id/BilTV006D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BilTV002D"
            android:textColor="@color/black"
            android:layout_weight="1" 
            android:textAppearance="?android:attr/textAppearanceLarge" />   

    </TableRow>
    
  <LinearLayout
      android:id="@+id/BilLL002"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="horizontal" >

       <Button
          android:visibility="invisible"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center|fill"
          />
      
      <Button
          android:id="@+id/BilBT001"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center|fill"
          android:text="@string/BilBT001" />

             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center|fill"
                 android:visibility="invisible" />

      <Button
          android:id="@+id/BilBT002"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center|fill"
          android:text="@string/BilBT002" />
             <Button
                 android:visibility="invisible"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center|fill"
          />
            
      <Button
          android:id="@+id/BilBT003"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center|fill"
          android:text="@string/BilBT003" />
      <Button
          android:visibility="invisible"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center|fill"
          />
      
    </LinearLayout>

</LinearLayout>